login & register page design finished!

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -273,4 +273,10 @@ body {
   }
 }
 
+//login screeen
+.login-screen{
+  background-image: url("../img/green.jpg");
+  background-size: cover;
+  height: 100vh;
+}
 
