--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -279,4 +279,45 @@ body {
   background-size: cover;
   height: 100vh;
 }
+//overlay
+.black-overlay{
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.3);
+  z-index: 2;
+}
+
+//shapes
+.l-shapes{
+  //-webkit-transform: skewY(-5deg);
+  //  //transform: skewY(-5deg);
+  transform: rotate(5deg);
+  -webkit-transform: rotate(5deg);
+  -webkit-transform-origin: 0;
+  transform-origin: 0;
+  -webkit-transition: width 2s !important; /* Safari prior 6.1 */
+  //transition: width 2s !important;
+  transition-delay: 4s !important;
+}
+
+.third-section{
+  background-color: #2a2a72;
+  background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  text-align: center;
+}
+
+.fourth-section{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.light-shadow{
+  -webkit-box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
+  box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
+}
 
